tests/fsharp/typeProviders/negTests/neg2c.bsl

neg2c.fsx(6,5,6,7): typecheck error FS0410: The type 'TheGeneratedType1' is less accessible than the value, member or type 'val f2: unit -> TheGeneratedType1' it is used in.
